# sec-recon-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SCORECARD.md  SECURITY.md  action.yml  docker-compose.egress.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-backend.yml  ci-docker-scan.yml  ci-frontend-e2e.yml  ci-frontend.yml  ci-sbom-gate.yml  deploy-demo.yml  release-images.yml
deploy/egress-proxy/: Dockerfile  filter  tinyproxy.conf
docs/: case_study.md  design.md  evaluation.md  frontend.md  iso_42001.md  mcp_self_audit.md  mitre_atlas.md  owasp_llm_top10.md  running.md  security_findings.md  tools.md
examples/: triage_walkthrough.md
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: a11y-sweep.mjs  build-demo.mjs  check-links.mjs  gen-docs.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/case-study/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/guide/: page.tsx
frontend/src/app/r/: page.tsx
frontend/src/app/scorecard/: page.tsx
frontend/src/app/triage/: page.tsx
frontend/src/components/: command-palette.tsx  demo-banner.tsx  footer.tsx  header.tsx  history-sidebar.tsx  progress-stream.tsx  provenance-note.tsx  providers.tsx  ssvc-decision-trace.tsx  ssvc-ladder-hero.tsx  theme-toggle.tsx  triage-form.tsx  triage-report-view.tsx
frontend/src/components/dashboard/: audit-tab.tsx  charts.tsx  kpi-card.tsx  observability-tab.tsx  statistics-tab.tsx  transparency-tab.tsx
frontend/src/components/docs/: doc-content.tsx  doc-footer.tsx
frontend/src/components/icons/: github-logo.tsx  linkedin-logo.tsx
frontend/src/demo/: audit.json  config.ts  fixtures.ts  meta.json  replay.ts
frontend/src/hooks/: use-history.ts  use-theme.ts  use-triage.ts  use-triage.tsx
frontend/src/lib/: agent-meta.ts  audit.ts  commands.ts  docs-generated.json  docs-search.ts  docs.ts  guide-data.ts  markdown-export.ts  nav-events.ts  permalink.ts  scorecard.ts  sse.ts  stats.ts  types.ts
scripts/: capture_audit_fixture.py  capture_fixtures.py  record_cassettes.py
security/vex/: chromadb_cve_2026_45829.openvex.json
src/sec_recon_agent/: config.py  observability.py
src/sec_recon_agent/agent/: grounding.py  prompts.py  schema.py  ssvc.py  trajectory.py  triage.py
src/sec_recon_agent/api/: budget.py  stream.py
src/sec_recon_agent/audit/: __init__.py  cli.py  models.py  store.py
src/sec_recon_agent/eval/: __init__.py  cassette.py  cli.py  cost.py  golden_set.py  metrics.py  retrieval.py  runner.py  scorecard.py  scorer.py
src/sec_recon_agent/export/: __init__.py  cli.py  openvex.py  records.py  sarif.py
src/sec_recon_agent/gate/: __init__.py  cli.py  models.py  render.py  runner.py  severity.py
src/sec_recon_agent/mcp_server/: auth.py  errors.py  hybrid.py  models.py  nvd_client.py  security.py  server.py
src/sec_recon_agent/redteam/: __init__.py  cli.py  payloads.py  scorer.py
tests/: test_observability.py
tests/agent/: test_grounding.py  test_ssvc.py  test_trajectory.py  test_triage.py
tests/api/: conftest.py  test_audit_endpoint.py  test_stream.py
tests/audit/: test_models.py  test_store.py
tests/cassettes/: apache-path-traversal.json  cve-by-id-printnightmare.json  eternalblue-smbv1.json  generic-rce-description.json  heartbleed.json  log4shell-jndi.json  sbom-log4j-cyclonedx.json  shellshock.json  spring4shell.json  unknown-cve-degrade.json  xz-utils-backdoor.json
tests/eval/: test_cassette.py  test_cost.py  test_metrics.py  test_retrieval.py  test_runner.py  test_scorecard.py  test_scorer.py
tests/export/: test_openvex.py  test_sarif.py
tests/gate/: test_cli.py  test_render.py  test_runner.py  test_severity.py
tests/mcp_server/: test_auth.py  test_hybrid.py  test_security.py
tests/mcp_server/tools/: test_attack.py  test_cve.py  test_cve_search.py  test_epss.py  test_exploits.py  test_kev.py  test_nmap.py  test_osv.py  test_patch.py  test_sbom.py
tests/property/: test_adversarial.py  test_invariants.py
tests/redteam/: test_scorer.py
tests/replay/: test_replay_gate.py
(+31 files in other folders)
