[project]
name = "sec-recon-agent"
version = "0.1.0"
description = "Type-safe security triage agent built on Pydantic AI and a custom MCP server"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Simone La Porta", email = "slaporta94@gmail.com" },
]
keywords = ["pydantic-ai", "mcp", "cve", "security", "agent", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-ai>=0.0.13",
    "pydantic-settings>=2.6.0",
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "defusedxml>=0.7.1",
    "chromadb>=0.5.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "hypothesis>=6.100.0",
    "types-defusedxml>=0.7.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
sec-recon-mcp = "sec_recon_agent.mcp_server.server:main"
sec-recon-api = "sec_recon_agent.api.stream:main"
sec-recon-seed = "sec_recon_agent.mcp_server.tools.cve_search:seed_index"
sec-recon-eval = "sec_recon_agent.eval.cli:main"
sec-recon-audit = "sec_recon_agent.audit.cli:main"
sec-recon-redteam = "sec_recon_agent.redteam.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sec_recon_agent"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "A", "C4", "DTZ", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI relies on Depends() / Security() / Header() being called in
# parameter defaults; that is the documented usage. Whitelist them so
# B008 does not flag every endpoint.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Security", "fastapi.Header"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ASYNC"]
# Adversarial corpus contains intentional Unicode homoglyphs (Cyrillic С,
# full-width hyphens, etc.) used to verify the boundary regex rejects them.
"tests/property/test_adversarial.py" = ["S", "ASYNC", "RUF001", "RUF003"]
# Both modules do a single synchronous Path.write_bytes after a streaming
# download has already paid the network cost. The event-loop block is
# bounded by the size cap (20 MB / 50 MB) and exists by design. The
# trailing `# noqa: ASYNC240` keeps getting stripped by ruff-format
# trailing-comment optimization, so we move the ignore here.
"src/sec_recon_agent/mcp_server/tools/exploits.py" = ["ASYNC240"]
"src/sec_recon_agent/mcp_server/tools/kev.py" = ["ASYNC240"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: tests that load the sentence-transformer model or hit ChromaDB; can be skipped via `pytest -m 'not slow'`",
]

[tool.coverage.run]
source = ["sec_recon_agent"]
branch = true
# Skip code paths that only run under a live LLM or live MCP transport;
# they are exercised by the manual eval/redteam suites, not the fast lane.
omit = [
    "src/sec_recon_agent/agent/triage.py",       # needs Anthropic key + MCP server
    "src/sec_recon_agent/api/stream.py",         # entry-point wiring; the handlers are tested via TestClient
    "src/sec_recon_agent/mcp_server/server.py",  # FastMCP boot
    "src/sec_recon_agent/eval/cli.py",           # CLI shell
    "src/sec_recon_agent/eval/runner.py",        # HTTP client against a live stack
    "src/sec_recon_agent/redteam/cli.py",
    "src/sec_recon_agent/audit/cli.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true
# Soft floor: keeps a regression from silently dropping coverage.
fail_under = 70
